--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "turbo run lint"
   },
   "dependencies": {
-    "prettier": "^2.7.1",
-    "turbo": "^1.4.0"
+    "prettier": "2.7.1",
+    "turbo": "1.4.0"
   },
   "engines": {
     "node": ">=14.0.0",
