--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "remix-example-turborepo-vercel",
   "private": true,
-  "packageManager": "yarn@1.22.18",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -11,14 +9,18 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write .",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck"
   },
   "dependencies": {
+    "@types/glob": "8.0.0",
+    "glob": "8.0.3",
     "prettier": "2.7.1",
     "turbo": "1.5.4"
   },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
-  }
+  },
+  "prettier": {}
 }
